# hawaiidisco

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  config.example.yml  config.yml  pyproject.toml  release-please-config.json
.github/scripts/: openai_review.py
.github/workflows/: ci.yml  pr-review.yml  publish.yml  release.yml
docs/: demo.tape
hawaiidisco/: __init__.py  __main__.py  app.py  bookmark.py  config.py  db.py  digest.py  fetcher.py  i18n.py  insight.py  md_render.py  notion.py  obsidian.py  opml.py  reader.py  translate.py  utils.py
hawaiidisco/ai/: __init__.py  anthropic_api.py  base.py  claude_cli.py  openai_api.py  prompts.py
hawaiidisco/i18n/: CONTRIBUTING.md  __init__.py  validate.py
hawaiidisco/i18n/locales/: de.yml  en.yml  es.yml  ja.yml  ko.yml  zh_CN.yml
hawaiidisco/screens/: __init__.py  article.py  bookmark.py  digest.py  feed.py  memo.py  opml_import.py  search.py  tag.py  theme.py
hawaiidisco/widgets/: __init__.py  detail.py  status.py  timeline.py
tests/: test_ai_provider.py  test_article_screen.py  test_config.py  test_db.py  test_feed_bookmark_screens.py  test_i18n.py  test_insight.py  test_integration.py  test_md_render.py  test_notion.py  test_obsidian.py  test_opml.py  test_prompts_domain.py  test_security.py  test_timeline.py  test_translate_body.py
