[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hawaiidisco"
version = "0.3.1"
description = "Your AI-powered reading companion in the terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "ongyjho" }]
keywords = ["rss", "reader", "terminal", "tui", "ai", "claude", "textual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
]
dependencies = [
    "textual>=0.85.0,<2.0",
    "feedparser>=6.0,<7.0",
    "pyyaml>=6.0,<7.0",
    "defusedxml>=0.7,<1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30,<2.0"]
openai = ["openai>=1.0,<3.0"]
all = ["anthropic>=0.30,<2.0", "openai>=1.0,<3.0"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/ongyjho/hawaiidisco"
Repository = "https://github.com/ongyjho/hawaiidisco"
Issues = "https://github.com/ongyjho/hawaiidisco/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.hatch.build.targets.wheel]
packages = ["hawaiidisco"]

[project.scripts]
hawaiidisco = "hawaiidisco.app:main"
